src/test/deca/codegen/extension/valid/created/Objet/Cast.deca
// Description:
// Test divers et variés de cast
// Resultats:
// 1.0
// 0x1.0p0

class A{
    int m(){
        return 1;
    }
}

{
    int a = 1;
    int b = 2;
    println((float)(1));
    printlnx((float)(new A().m()));
}